20130528 - fhabermann
* added save acl for page new and edit
* added acl check on getContents
* added acl check on getPages
* getPages returns array of Page objects

20130527 - fhabermann
* added save acl for content new and edit

20130524 - fhabermann
* bootstrap update to version 2.3.2
* dojo upgrade to 1.9.0
* jquery upgrade to 1.10.0

20130410 - fhabermann
* added acl to demo dump
* using tinyint in mysql instead of boolean
* fixed problems with true/false in mysql

20130407 - fhabermann
* added more acl checks

20130406 - fhabermann
* fixed big problem with Knowledgeroot_Acl that was used internaly wrong
* update composer
* added first acl checks

20130321 - fhabermann
* added first save acl feature

20130315 - fhabermann
* save user permissions in browser javascript var if permissions are changed

20130307 - fhabermann
* bootstrape upgrade to version 2.3.1
* added better accordion icon handling over extra js script

20130214 - fhabermann
* added js functions to handle permissions

20130208 - fhabermann
* bootstrap upgrade to version 2.3.0

20130206 - fhabermann
* added first permissionpanel as view helper

20130110 - fhabermann
* added first system permissions stuff like controller and templates

20130102 - fhabermann
* enable function to enable or disable user
* added delete for user
* added new permissions menu
* login only for active users
* added group handling

20121230 - fhabermann
* enable user listing, add user and edit user

20121227 - fhabermann
* added system settings to layout
* added Knowledgeroot_Page_Default plugin to handle default page

20121226 - fhabermann
* added Knowledgeroot_Content_Parser
* using objects in getContents of Knowledgeroot_Content
* enable getContents with raw content in Knowledgeroot_Content

20121219 - fhabermann
* upgraded to jquery 1.8.3
* upgraded to dojo 1.8.2
* composer update

20121215 - fhabermann
* added check if modules config exists

20121213 - fhabermann
* enabled namespace declaration in modules