@@ -73,5 +73,32 @@ INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'manageRootP
 INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'manageRootPages', 'edit', 'allow');
 INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'manageRootPages', 'delete', 'allow');
 INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'manageRootPages', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'new', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'edit', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'delete', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'permission', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_1', 'new_content', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'new', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'edit', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'delete', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'permission', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_2', 'new_content', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'new', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'edit', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'delete', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'permission', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'page_3', 'new_content', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'content_1', 'edit', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'content_1', 'delete', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'content_1', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'content_1', 'print', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_1', 'content_1', 'permission', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_0', 'page_1', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_0', 'page_1', 'new_content', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_0', 'content_1', 'show', 'allow');
+INSERT INTO acl (role_id, resource, action, [right]) VALUES ('U_0', 'content_1', 'print', 'allow');
 
 GO
